samples/_failures_safe/1761689900_c76097_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42c87706.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_42c87706.c:122:17: error: expected ‘,’ or ‘;’ at end of input
  122 |                 int prod = aval
      |                 ^~~
./samples/SAFE/__tmp_42c87706.c:122:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42c87706.c:122:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42c87706.c:122:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42c87706.c:122:17: error: expected declaration or statement at end of input
